(test
 (name pure_html_test)
 (package pure-html)
 (libraries pure-html)
 (modules pure_html_test))

(test
 (name dream_html_test)
 (package dream-html)
 (libraries dream-html)
 (modules dream_html_test))

(test
 (name route_test)
 (package dream-html)
 (libraries dream_html)
 (modules route_test)
 (preprocess
  (pps dream-html.ppx)))
